[gd_scene load_steps=8 format=3 uid="uid://bhcfb2wfhkwlm"]

[ext_resource type="Script" path="res://Scripts/character_body_3d.gd" id="1_gk1aw"]
[ext_resource type="Script" path="res://hurtablebox.gd" id="2_eu2af"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nilvd"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kgffi"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxMesh" id="BoxMesh_oroqo"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_v0w1f"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_drn2f"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993142, 0)
disable_mode = 1
script = ExtResource("1_gk1aw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nilvd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_kgffi")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.511804, 0)

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="WeaponPivot" type="Node3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.511804, 0)

[node name="WeaponMesh" type="MeshInstance3D" parent="head/Camera3D/WeaponPivot"]
transform = Transform3D(0.0999253, -0.0079162, 0.003783, 0, 0.9788, 0.0204821, -0.00386494, -0.204668, 0.0978068, 0.419394, 0.0448086, -0.426507)
mesh = SubResource("BoxMesh_oroqo")

[node name="Hitbox" type="Area3D" parent="head/Camera3D/WeaponPivot/WeaponMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/Camera3D/WeaponPivot/WeaponMesh/Hitbox"]
transform = Transform3D(1, 0, 0, -5.82077e-11, 1, 0, 3.72529e-09, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_v0w1f")

[node name="Hurtablebox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_eu2af")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Hurtablebox"]
shape = SubResource("ConvexPolygonShape3D_drn2f")

[connection signal="area_entered" from="Hurtablebox" to="." method="_on_hurtablebox_area_entered"]
